[tool.poetry]
name = "haruka-bot"
version = "1.4.1.post5"
description = "Push dynamics and live informations from bilibili to QQ. Based on nonebot2."
authors = ["SK-415 <2967923486@qq.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/SK-415/HarukaBot"
repository = "https://github.com/SK-415/HarukaBot/tree/master/src/plugins/haruka_bot"
documentation = "https://github.com/SK-415/HarukaBot#readme"
keywords = ["nonebot", "nonebot2", "qqbot", "bilibili", "bot"]
include = ["haruka_bot/web/build/**/*"]

[tool.poetry.scripts]
hb = 'haruka_bot.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
httpx = "^0.23.0"
nonebot-adapter-onebot = "^2.1.1"
nonebot-plugin-apscheduler = "^0.1.4"
nonebot2 = "^2.0.0-beta.5"
playwright = "^1.22.0"
pydantic = "^1.9.0"
python-dotenv = ">=0.19.2,<0.22.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.2"}
aerich = "^0.6.3"
bilireq = "^0.2.2.post0"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
nonebot-plugin-gocqhttp = "^0.5.6"

[tool.nonebot]
plugins = ["haruka_bot", "nonebot_plugin_gocqhttp"]

# [[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
